--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,20 @@
+Rails:
+  Enabled: true
+AllCops:
+  TargetRubyVersion: 2.3
+  Exclude:
+    - 'config/**/*'
+    - 'script/**/*'
+    - 'db/schema.rb'
+    - 'app/views/**/*'
+    - 'db/schema.rb'
+    - 'config/**/*'
+    - 'script/**/*'
+    - 'db/schema.rb'
+    - 'app/views/**/*'
+    - 'Gemfile'
+    - 'log/**/*'
+
 Documentation:
   Enabled: false
 
@@ -16,7 +33,7 @@ Metrics/LineLength:
 
 Metrics/BlockLength:
   Exclude:
-    - 'rails/spec/**/*'
+    - 'spec/**/*'
 
 Style/DotPosition:
   Enabled: false
@@ -46,20 +63,3 @@ Metrics/MethodLength:
   Max: 15
   CountComments: false
   Enabled: true
-
-AllCops:
-  TargetRubyVersion: 2.3
-  Exclude:
-    - 'config/**/*'
-    - 'script/**/*'
-    - 'db/schema.rb'
-    - 'app/views/**/*'
-    - 'rails/db/schema.rb'
-    - 'rails/config/**/*'
-    - 'rails/script/**/*'
-    - 'rails/db/schema.rb'
-    - 'rails/app/views/**/*'
-    - 'Gemfile'
-    - 'log/**/*'
-
-  TargetRubyVersion: 2.3
